--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--app-->
     <string name="app_name" translatable="false">The Guardian</string>
+    <string name="toolbar_menu_button_settings" translatable="false">Settings</string>
 
     <!--news activity-->
     <string name="button_readMore">Read more</string>
 
     <!--settings activity-->
-    <string name="title_activity_settings">Settings</string>
+    <string name="toolbar_activity_settings">Settings</string>
+    <string name="option_1">Option 1</string>
 
     <!--errors-->
     <string name="generic_error">Something was wrong. Please try again later.</string>
