--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,10 @@
     <!--news activity-->
     <string name="button_readMore">Read more</string>
 
+    <!--web view activity-->
+    <string name="snackBar_action">An error occurred when loading the page</string>
+    <string name="snackBar_text">BACK</string>
+
     <!--settings activity-->
     <string name="toolbar_activity_settings">Settings</string>
     <string name="option_1">Option 1</string>
