--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,8 @@
 
     <!--settings activity-->
     <string name="toolbar_activity_settings">Settings</string>
-    <string name="option_1">Option 1</string>
+    <string name="option_night_mode_off">Night mode</string>
+    <string name="option_night_mode_on">Night mode on</string>
 
     <!--errors-->
     <string name="generic_error">Something was wrong. Please try again later.</string>
