--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,11 @@
 <resources>
     <!--app-->
     <string name="app_name" translatable="false">The Guardian</string>
-    <string name="toolbar_menu_button_settings" translatable="false">Settings</string>
+    <string name="toolbar_menu_button_settings">Settings</string>
 
     <!--news activity-->
     <string name="button_readMore">Read more</string>
+    <string name="no_news">We have nothing to report</string>
 
     <!--web view activity-->
     <string name="snackBar_action">An error occurred when loading the page</string>
